[tool.poetry]
name = "test-ci"
version = "0.1.0"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]
readme = "README.md"
packages = [{include = "test_ci"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorboard = "^2.14.0"
wandb = "^0.13"
gym = "0.23.1"
torch = "^2.0.1"
gymnasium = "^0.29.1"
moviepy = "^1.0.3"
pygame = "^2.5.1"
openrlbenchmark = "0.2.1a5"
huggingface-hub = "^0.16.4"
tqdm = "^4.66.1"
ghapi = "^1.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
